ExitableDirectoryReader should not cover-up singletons (#15498)